contact social update, new issue spotted: Chrome Browser on iPhone distorts images on index.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -39,6 +39,7 @@ a {
 }
 .shape{
 	width: 33.3%; 
+	height: 33.3%; /* issue with chrome browser on phone, still not fixed but better, assume img tag problem */
 	margin: 200px auto; /* needs to be in .shape for media query to work see media comments*/
 	position: absolute; /* this coupled with left: ### is what changed the order of the shape divs for big screens*/
 }
@@ -102,23 +103,26 @@ p {
     max-width: 300px;
     border: none;
 }
-ul li {
+.contact ul li {
 	font-size: 20px;
 	line-height: 80px;
 	list-style-type: none;
 }
-li img {
+.contact li img {
 	margin-right: 20px;
 	vertical-align: middle;
 }
-/* Below sets different parameters for when the width of the browser is LESS than 600px*/
+/* Below sets different parameters for when the width of the browser is:
+LESS than 600px --or-- the device orientation is portrait (phones). 
+There is an issue with Chrome and image distortion, might be to do with .shape img % */
 @media (orientation:portrait), (max-width: 600px) {
-	#wrap {
+	/*#wrap {
 		width: 100%;
-	}
+	}*/
 	.shape{ /*Not sure why but a verticle margin in #wrap wouldn't work, see above, keep in .shape class */
 		margin: 100px auto;
 		width: 100%;
+		height: auto;
 		position: static; /*this returns the position of the elements to the html structure (circle first)*/
 	}
 	.section {
@@ -127,11 +131,11 @@ li img {
 		position: static;
 	}
 	#face {
-		max-width: 200px;
+		max-width: 250px;
 		position: static;
 	}
 	#card {
-		max-width: 200px;
+		max-width: 250px;
 		position: static;
 	}
 	p {
